# amplifier-bundle-webllm

./: README.md  bundle.md  bundle.yaml
behaviors/: webllm-context.yaml  webllm-runtime.yaml  webllm.yaml
context/: error-handling.md  model-selection-guide.md  system-prompt-escaping.md  webllm-guide.md
modules/provider-webllm/: README.md  pyproject.toml
modules/provider-webllm/amplifier_module_provider_webllm/: __init__.py  provider.py
providers/: webllm.yaml
