[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amplifier-module-provider-webllm"
version = "0.1.0"
description = "WebLLM provider for Amplifier - local browser-based LLM inference via WebGPU"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Microsoft", email = "amplifier@microsoft.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "amplifier-core>=0.1.0",
]

[project.entry-points."amplifier.modules"]
provider-webllm = "amplifier_module_provider_webllm:mount"

[project.urls]
Homepage = "https://github.com/microsoft/amplifier-bundle-webllm"
Repository = "https://github.com/microsoft/amplifier-bundle-webllm"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_provider_webllm"]
